[package]
name = "rss_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
tokio-stream = "0.1.17"
quick-xml = { version ="0.38.0", features = ["async-tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20.0"